<!--  MPD XML Starter code Semester B Session 2020 2021  -->
<!--  Koka_Rei_S1826097  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/salutation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:text="@string/coursework_label"/>

        <Button
            android:id="@+id/btnCurrentIncidents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="@dimen/layout_space"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="@dimen/layout_top"
            android:backgroundTint="@android:color/holo_blue_light"
            android:padding="@dimen/layout_top"
            android:text="@string/btn_current_incident"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnRoadworks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="@dimen/layout_top"
            android:text="@string/btn_roadworks"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnPlannedRoadworks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:padding="@dimen/layout_top"
            android:text="@string/btn_planned_roadworks"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/acknowledgement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/layout_bottom"
            android:text="@string/data_information"/>

        <TextView
            android:id="@+id/rawDataDisplay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""/>

    </LinearLayout>