<?xml version="1.0" encoding="utf-8"?>
<!--  Koka_Rei_S1826097  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_light"
    tools:context=".TrafficScotlandActivityList">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textStyle="bold"
      android:layout_marginTop="@dimen/layout_top"
      android:gravity="center"
      android:text="@string/app_name"/>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:layout_margin="@dimen/layout_top"
         android:layout_gravity="center"
         android:text="@string/filter_by"/>
  <Button
      android:id="@+id/btnSelectDate"
      android:text="@string/choose_date"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/txtClear"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="25sp"
         android:textColor="@android:color/holo_red_light"
         android:text="X"/>
   </LinearLayout>
  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      style="?attr/progressBarStyle"
      android:layout_marginTop="@dimen/layout_top"
      android:indeterminateTint="@android:color/holo_blue_light"/>
  <LinearLayout
      android:id="@+id/noDataLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
    android:orientation="vertical">
    <ImageView
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/ic_alert_incidents" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textSize="15sp" />
  </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>